[gd_scene load_steps=12 format=3 uid="uid://bfo442g8sgahl"]

[ext_resource type="AudioStream" uid="uid://crt3j3lgpdd27" path="res://assets/chicory/sounds/sfx/paint/colour_change/01.wav" id="1_ao0n3"]
[ext_resource type="Script" path="res://objects/brush/brush_sounds.gd" id="1_qjowx"]
[ext_resource type="AudioStream" uid="uid://qdhv5jonw62l" path="res://assets/chicory/sounds/sfx/paint/colour_change/02.wav" id="2_ojc3w"]
[ext_resource type="AudioStream" uid="uid://c5qcjmkh2m2ey" path="res://assets/chicory/sounds/sfx/paint/colour_change/03.wav" id="3_eg6qn"]
[ext_resource type="AudioStream" uid="uid://dtsg4u8t4diom" path="res://assets/chicory/sounds/sfx/paint/colour_change/04.wav" id="4_ulbcx"]
[ext_resource type="AudioStream" uid="uid://dp8sfrcw5wqlp" path="res://assets/chicory/sounds/sfx/paint/size_change/01.wav" id="5_q0hdp"]
[ext_resource type="AudioStream" uid="uid://bb2uekcskg7yu" path="res://assets/chicory/sounds/sfx/paint/size_change/02.wav" id="6_6dswh"]
[ext_resource type="AudioStream" uid="uid://bdr1j1ou4lt0g" path="res://assets/chicory/sounds/sfx/paint/size_change/03.wav" id="7_1gh8f"]
[ext_resource type="AudioStream" uid="uid://fmo48c5kxo4m" path="res://assets/chicory/sounds/sfx/paint/medium_loop.wav" id="9_rqbwd"]
[ext_resource type="AudioStream" uid="uid://ctxviwgpcl5je" path="res://assets/chicory/sounds/sfx/erase/loop/mono.wav" id="10_lyltl"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fbgic"]
streams_count = 4
stream_0/stream = ExtResource("1_ao0n3")
stream_0/weight = 1.0
stream_1/stream = ExtResource("2_ojc3w")
stream_1/weight = 1.0
stream_2/stream = ExtResource("3_eg6qn")
stream_2/weight = 1.0
stream_3/stream = ExtResource("4_ulbcx")
stream_3/weight = 1.0

[node name="brush_sounds" type="Node2D"]
script = ExtResource("1_qjowx")

[node name="color_switch" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_fbgic")
volume_db = -12.0
bus = &"BrushSounds"

[node name="size_small" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_q0hdp")
volume_db = -12.0
bus = &"BrushSounds"

[node name="size_medium" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6dswh")
volume_db = -12.0
bus = &"BrushSounds"

[node name="size_big" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_1gh8f")
volume_db = -12.0
bus = &"BrushSounds"

[node name="paint_medium" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_rqbwd")
panning_strength = 3.0
bus = &"BrushSounds"

[node name="erase" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_lyltl")
volume_db = -5.0
panning_strength = 3.0
bus = &"EraseBus"
